/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.primitive.v1;

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";

service PrimitiveManager {
    rpc Open (OpenPrimitiveRequest) returns (OpenPrimitiveResponse);
    rpc Close (ClosePrimitiveRequest) returns (ClosePrimitiveResponse);
}

message Primitive {
    PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    string type = 2;
    google.protobuf.Any config = 3;
}

message PrimitiveId {
    string name = 1;
}

message OpenPrimitiveRequest {
    Primitive primitive = 1;
}

message OpenPrimitiveResponse {

}

message ClosePrimitiveRequest {
    PrimitiveId primitive_id = 1 [
        (gogoproto.customname) = "PrimitiveID",
        (gogoproto.nullable) = false
    ];
}

message ClosePrimitiveResponse {

}
